@@ -1,6 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:z3c="http://namespaces.zope.org/z3c"
     >
 
   <browser:viewletManager
@@ -9,6 +10,27 @@
       class=".manager.SearchResultHandlerManager"
       permission="zope.Public"
       />
+
+  <adapter factory=".delete.SelectionCount" />
+
+  <z3c:pagelet
+      for="icemac.addressbook.interfaces.IAddressBook"
+      layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+      name="delete_persons.html"
+      permission="icemac.addressbook.EditAddressBook"
+      class=".delete.DeleteForm"
+      />
+
+  <z3c:siteMenuItem
+     manager=".manager.ISearchResultHandlers"
+     layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+     name="delete"
+     title="Delete (Deletes selected persons.)"
+     viewName="@@delete_persons.html"
+     class=".manager.SearchResultHandler"
+     permission="icemac.addressbook.EditAddressBook"
+     weight="200"
+     />
 
   <include package=".export" />
 
